2007-10-12  David N. Welton  <davidw@dedasys.com>

	* doc/rivet.xml: Fixed "dio" id's.

2007-10-11  David N. Welton  <davidw@dedasys.com>

	* doc/rivet.xml: Added missing ID's.

	* doc/Makefile.am (docs): Removed Russian and Italian
	translations from the build.

	* doc/norefchunk.xsl, doc/refentry.xsl: Ditch fancy-pants XSLT
	stuff.

2007-09-19  Massimo Manghi <massimo.manghi@unipr.it>

	* configure.ac: TEA_INIT argument was changed to 3.6 to match 
	the new TEA version in the tcl.m4. Macro for --with-apache was
	simplified. Macro for --with-apxs changed in order to check for 
	possible multiple version of apxs installed.
	Defined compilation parameters generated by apxs.
	Same for apr-1-config that returns compilation parameters for apr.

	* Makefile.am src/Makefile.am src/apache-[12]/Makefile.am:
	changed to handle new symbols and parameters

	* src/apache-1/mod_rivet.[hc] rivet version logging enabled:
	I enabled this to check if I was loading the expected module
	but maybe can be used to generate, at least for the code in
	trunk, more refined version numbers to be used in the
	development cycle.

	* src/rivetCore.c: added call to initialize commands
	in rivetWWW.

2007-09-09  David N. Welton  <davidw@dedasys.com>

	* src/apache-2/Makefile.am: Another patch from Valery Masiutsin
	<val.masutin@gmail.com>: Propagated variables from configure.ac,
	did some cleanups.

	* src/apache-1/Makefile.am: More of Valery's patch: Propogate
	variables from configure.ac.

	* configure.ac: More of Valery's patch: Separated cases for
	apache-1 and apache-2 in APACHE function.  Added handling for
	apache-2 for platforms i am developing on.  Probably it will need
	to be unified later.  Touched CHECK_APXS a bit.  Replaced
	APR_INCLUDES function with APR_HANDLING, now we are requiring full
	path for apr-1-config and getting cppflags and includes from
	it. APR tool has platform specific set of cppflags, just includes
	is not enough.  Added GET_RIVET_BASE function, which allows us to