@@ -12,13 +12,17 @@
 proc load_response {{arrayName response}} {
     upvar 1 $arrayName response
 
-    array set response {}
-
     foreach {var elem} [var all] {
-        if {[info exists response($var)]} {
-            set response($var) [list $response($var) $elem]
-        } else {
-            set response($var) $elem
-        }
+	if {[info exists response(__$var)]} {
+		# we have seen var multiple times already, add to the list
+		lappend response($var) $elem
+	} elseif {[info exists response($var)]} {
+		# second occurence of var,  convert response(var) list:
+		set response($var) [list $response($var) $elem]
+		set response(__$var) ""
+	} else {
+		# first time seeing this var
+		set response($var) $elem
+	}
     }
 }
